[gd_scene load_steps=3 format=3 uid="uid://bnfg4u7xpux4f"]

[ext_resource type="Script" path="res://log_in.gd" id="1_d72sq"]
[ext_resource type="Script" path="res://IpText.gd" id="1_or702"]

[node name="LogIn" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_d72sq")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 446.0
offset_right = 706.0
offset_bottom = 648.0
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_lock_ = true

[node name="PlayerName" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 147.0
offset_right = 260.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="VBoxContainer/PlayerName"]
layout_mode = 2
offset_right = 260.0
offset_bottom = 26.0
text = "Player's Name"
horizontal_alignment = 1

[node name="NameText" type="TextEdit" parent="VBoxContainer/PlayerName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_top = 30.0
offset_right = 260.0
offset_bottom = 65.0
placeholder_text = "Default"
scroll_fit_content_height = true

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 262.0
offset_right = 260.0
offset_bottom = 305.0
theme_override_font_sizes/font_size = 25
text = "Host"

[node name="Connect" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 355.0
offset_right = 260.0
offset_bottom = 420.0

[node name="Label" type="Label" parent="VBoxContainer/Connect"]
layout_mode = 2
offset_right = 260.0
offset_bottom = 26.0
text = "Connect to Server"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Connect"]
layout_mode = 2
offset_top = 30.0
offset_right = 260.0
offset_bottom = 65.0
theme_override_constants/separation = 10

[node name="IpText" type="TextEdit" parent="VBoxContainer/Connect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 200.0
offset_bottom = 35.0
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true
script = ExtResource("1_or702")

[node name="Enter" type="Button" parent="VBoxContainer/Connect/HBoxContainer"]
layout_mode = 2
offset_left = 210.0
offset_right = 260.0
offset_bottom = 35.0
text = "Enter"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 470.0
offset_right = 260.0
offset_bottom = 501.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="text_changed" from="VBoxContainer/Connect/HBoxContainer/IpText" to="VBoxContainer/Connect/HBoxContainer/IpText" method="_on_text_changed"]
[connection signal="pressed" from="VBoxContainer/Connect/HBoxContainer/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
